[gd_scene load_steps=3 format=3 uid="uid://bms2bwebdg2mj"]

[ext_resource type="Script" uid="uid://52akdfkq4ffg" path="res://actors/AI.gd" id="1"]

[sub_resource type="CircleShape2D" id="1"]
radius = 320.4

[node name="AI" type="Node2D"]
script = ExtResource("1")

[node name="DetectionZone" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("1")
debug_color = Color(0.996078, 0, 0, 0.0823529)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="PathLine" type="Line2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_PatrolTimer_timeout"]
